manifests/timelimit/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timelimit
  labels:
    app: timelimit
spec:
  type: ClusterIP
  selector:
    app: timelimit
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
