manifests/timelimit/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timelimit
  labels:
    gateway: private
    app: timelimit
spec:
  hostnames:
    - timelimit.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: timelimit
          port: 8080
